objects/Image_Detection__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Image_Detection__c</referenceTo>
        <relationshipLabel>Image Detections</relationshipLabel>
        <relationshipName>Image_Detections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Image Detection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Locale__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Image Detections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>